# chat_zaia

./: .gitignore  docker-compose.yml  messages.json
backend/: package-lock.json  package.json  tsconfig.json
zaia_microservice/: Dockerfile  pyproject.toml  reportCrew.json  requirements.txt
zaia_microservice/db/: chroma.sqlite3
zaia_microservice/knowledge/: user_preference.txt
zaia_microservice/src/zaia_agents/: main.py
zaia_microservice/src/zaia_agents/config/: agents.yaml
zaia_microservice/src/zaia_agents/controllers/: chat_controller.py  status_controller.py
zaia_microservice/src/zaia_agents/helpers/: conditions_helper.py  file_helper.py  memory_helper.py  post_status_helper.py
zaia_microservice/src/zaia_agents/models/: chat_model.py  memory_model.py  task_model.py
zaia_microservice/src/zaia_agents/routers/: chat_routes.py  status_routes.py
zaia_microservice/src/zaia_agents/services/: crew_service.py
zaia_microservice/src/zaia_agents/tools/: custom_tool.py  weather_tool.py
zaia_service/: README.md  reportCrew.json
zaia_service/db/: chroma.sqlite3
zaia_service/src/zaia_agents/: crew.py  main.py  routes.py
zaia_service/src/zaia_agents/config/: tasks.yaml
